# stree-symbolic

./: Makefile.am  args.cpp  args.hpp  configure.ac  fitness.cpp  fitness.hpp  functions.cpp  functions.hpp  generate_test_data.cpp  genetic.cpp  genetic.hpp  individual.cpp  individual.hpp  plot.cpp  plot.hpp  random.cpp  random.hpp  run.cpp  run.hpp  sample.conf  symbolic.cpp  tree.cpp  tree.hpp
